[package]
name = "raster_view"
version = "0.1.0"
authors = ["Leo Letellier <leo.letellier.6@gmail.com>"]
edition = "2024"
description = "Tiny viewer for large GDAL rasters"
# documentation
readme = "README.md"
# homepage
repository = "https://github.com/LeoLetellier/RasterView"
license = "AGPL-3.0-or-later"
keywords = ["raster", "viewer", "gdal"]
# categories
build = "build.rs"

[dependencies]
anyhow = "1.0.103"
clap = "4.6.1"
crossbeam = "0.8.4"
eframe = "0.35.0"
egui = "0.35.0"
egui-phosphor = { git = "https://github.com/crumblingstatue/egui-phosphor", branch = "egui-035", features = ["bold", "fill", "light", "thin"] }
egui_extras = "0.35.0"
egui_plot = "0.36.0"
env_logger = "0.11.11"
gdal = { version = "0.19.0", features = ["ndarray"] }
gdal-sys = "0.12.0"
geo = "0.33.1"
log = "0.4.33"
ndarray = { version = "0.17.2", features = ["rayon"] }
num-traits = "0.2.19"
quick_cache = "0.7.0"
rayon = "1.12.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
